mostly there - need to collapse down some of the code, add validation, fix the form changer

--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -1313,6 +1313,9 @@ label.error {
 	float:left;
 	margin-right:10px;
 }
+.report_row input.custom_text, .textarea {
+	width:90%;
+}
 .report_category {
 	clear:both;
 	overflow:hidden;
